[package]
name            = "dryad"
description     = "A model that stimulates the evolution and development of trees."
version         = "0.0.1"
edition         = "2021"
authors         = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
license         = "Apache-2.0"
readme          = "README.md"
include         = ["./src/**", "./README.md", "./LICENSE-APACHE"]
keywords        = ["evolution", "trees"]
rust-version    = "1.68"
repository      = "https://github.com/MayorDi/dryad"
homepage        = "https://github.com/MayorDi/dryad"

[dependencies]
glium           = "0.32.1"
jarylo          = "*"
rand            = { path = "../libs/rand",      version = "0.9.0"   }
log             = { path = "../libs/log",       version = "0.4.17"  }
nalgebra        = { path = "../libs/nalgebra",  version = "0.32.2"  }