[package]
name            = "dryad"
description     = "A model that simulates the evolution and development of trees."
version         = "0.0.1"
edition         = "2021"
authors         = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
license         = "Apache-2.0"
readme          = "README.md"
include         = ["src/**/*.*", "README.md", "LICENSE-APACHE"]
keywords        = ["evolution", "trees"]
rust-version    = "1.77.2"
repository      = "https://github.com/MayorDi/dryad"
homepage        = "https://github.com/MayorDi/dryad"

[dependencies]
rand            = "0.8.5" 
glfw = "*"
gl = "*"
